--- a/report/latex/report.tex
+++ b/report/latex/report.tex
@@ -54,10 +54,36 @@ The experiments are conducted 3 times independently. For each trial, all data is
 \makebox[\subFigx]{(b) 50\%}
 \makebox[\subFigx]{(c) 75\%}
 \makebox[\subFigx]{(d) 100\%}\\
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_1.txt_bias-1_bs128_do0.1e25/orthoQB02_11JAN121245196-M1BS-101001000CD66D00_u08rfAEAC.png}
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_2.txt_bias-1_bs128_do0.1e25/orthoQB02_11JAN121245196-M1BS-101001000CD66D00_u08rfAEAC.png}
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_3.txt_bias-1_bs128_do0.1e25/orthoQB02_11JAN121245196-M1BS-101001000CD66D00_u08rfAEAC.png}
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_4.txt_bias-1_bs128_do0.1e25/orthoQB02_11JAN121245196-M1BS-101001000CD66D00_u08rfAEAC.png}
+
+
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_1.txt_bias-1_bs128_do0.1e25/orthoWV02_11FEB251253222-M1BS-1030010009092C00_u08rfAEAC.png}
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_2.txt_bias-1_bs128_do0.1e25/orthoWV02_11FEB251253222-M1BS-1030010009092C00_u08rfAEAC.png}
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_3.txt_bias-1_bs128_do0.1e25/orthoWV02_11FEB251253222-M1BS-1030010009092C00_u08rfAEAC.png}
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_4.txt_bias-1_bs128_do0.1e25/orthoWV02_11FEB251253222-M1BS-1030010009092C00_u08rfAEAC.png}
+
+
 \includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_1.txt_bias-1_bs128_do0.1e25/WV02_20110131195115_1030010009CCF900_11JAN31195115-M1BS-052549143040_01_P003_u08rf3031.png}
 \includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_2.txt_bias-1_bs128_do0.1e25/WV02_20110131195115_1030010009CCF900_11JAN31195115-M1BS-052549143040_01_P003_u08rf3031.png}
 \includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_3.txt_bias-1_bs128_do0.1e25/WV02_20110131195115_1030010009CCF900_11JAN31195115-M1BS-052549143040_01_P003_u08rf3031.png}
 \includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_4.txt_bias-1_bs128_do0.1e25/WV02_20110131195115_1030010009CCF900_11JAN31195115-M1BS-052549143040_01_P003_u08rf3031.png}
+
+
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_1.txt_bias-1_bs128_do0.1e25/WV02_20160101055824_103001004E1BFF00_16JAN01055824-M1BS-500637502050_01_P007_u08rf3031.png}
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_2.txt_bias-1_bs128_do0.1e25/WV02_20160101055824_103001004E1BFF00_16JAN01055824-M1BS-500637502050_01_P007_u08rf3031.png}
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_3.txt_bias-1_bs128_do0.1e25/WV02_20160101055824_103001004E1BFF00_16JAN01055824-M1BS-500637502050_01_P007_u08rf3031.png}
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_4.txt_bias-1_bs128_do0.1e25/WV02_20160101055824_103001004E1BFF00_16JAN01055824-M1BS-500637502050_01_P007_u08rf3031.png}
+
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_1.txt_bias-1_bs128_do0.1e25/WV03_20170217064537_10400100297FEA00_17FEB17064537-M1BS-057107305010_01_P001_u08rf3031.png}
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_2.txt_bias-1_bs128_do0.1e25/WV03_20170217064537_10400100297FEA00_17FEB17064537-M1BS-057107305010_01_P001_u08rf3031.png}
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_3.txt_bias-1_bs128_do0.1e25/WV03_20170217064537_10400100297FEA00_17FEB17064537-M1BS-057107305010_01_P001_u08rf3031.png}
+\includegraphics[width=\subFigx]{./fig/datagrow/MSE_single_unet_train_0_4.txt_bias-1_bs128_do0.1e25/WV03_20170217064537_10400100297FEA00_17FEB17064537-M1BS-057107305010_01_P001_u08rf3031.png}
+
+
+
 \caption{{{\bf Performance of our model with different amount of training data.}}}
 \label{fig:impress}
 \end{figure}
